--- a/notebooks/1 - Building Classifiers for Adult Dataset.ipynb
+++ b/notebooks/1 - Building Classifiers for Adult Dataset.ipynb
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05d7799f",
+   "id": "24c194da",
    "metadata": {},
    "source": [
     "Evaluating our best model on the test dataset (holdout data) and printing the final metrics."
@@ -628,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "2b07b455",
+   "id": "c2969e63",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "245d60d6",
+   "id": "891012b7",
    "metadata": {},
    "source": [
     "## 4.2. Random Forest Classifier\n",
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "744d4aae",
+   "id": "e33ac637",
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a14e837a",
+   "id": "c35dc91e",
    "metadata": {},
    "source": [
     "Evaluating our best model on the test dataset (holdout data) and printing the final metrics."
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "9e40f9a9",
+   "id": "e9eceb22",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8f658be",
+   "id": "f6a0cd50",
    "metadata": {},
    "source": [
     "## 4.2. MLP Classifier\n",
@@ -765,8 +765,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5c00ddfa",
+   "execution_count": 38,
+   "id": "e08393cf",
    "metadata": {},
    "outputs": [
     {
@@ -776,6 +776,20 @@
       "/home/user01/.local/lib/python3.8/site-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
       "  and should_run_async(code)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=MLPClassifier(), n_jobs=-2,\n",
+       "             param_grid={'activation': ['logistic', 'relu'],\n",
+       "                         'hidden_layer_sizes': [(500, 200, 100), (50, 20, 10),\n",
+       "                                                (250, 100, 50)]},\n",
+       "             scoring='accuracy')"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -794,13 +808,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6722d90e",
+   "cell_type": "markdown",
+   "id": "0e7ddf94",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Evaluating our best model on the test dataset (holdout data) and printing the final metrics."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "161a050c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/user01/.local/lib/python3.8/site-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+      "  and should_run_async(code)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------\n",
+      "Best MLP Classifier:  MLPClassifier(activation='logistic', hidden_layer_sizes=(500, 200, 100))\n",
+      "Accuracy on Training Set: 84.81%\n",
+      "---------------\n",
+      "Test Metrics\n",
+      "Accuracy: 83.66\n",
+      "Precision: 67.66\n",
+      "Recall: 58.54\n"
+     ]
+    }
+   ],
    "source": [
     "print_metrics(grid, X_test, y_test, 'MLP')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45a8da06",
+   "metadata": {},
+   "source": [
+    "# 5. Conclusions\n",
+    "\n",
+    "The final results shows that the KNN classifier is the best model for classification in the Adult dataset considering the Data Engineering steps applied in this notebook. In this case, the simple of all models did the best results. That could be explained by the size of the dataset, which is not big enough to train a complex model such as an MLP, for instance. Nonetheless, the results for both of the three models employed here are very similar.\n",
+    "\n",
+    "| Model Type    | Accuracy | Precision | Recall |\n",
+    "|:---------------:|:---------:|:-----------:|:--------:|\n",
+    "| KNN           | **86.28%**   | **76.45%**    | 60.26%  |\n",
+    "| Random Forest | 85.02%   | 71.04%    | **61.34%** |\n",
+    "| MLP           | 83.66%   | 67.66%    | 58.54  |"
    ]
   }
  ],
